[gd_scene load_steps=4 format=3 uid="uid://cwt3b5ha2cme6"]

[ext_resource type="Script" path="res://gui/drawers/properties/StatePropertyEditor.gd" id="1_dyivk"]
[ext_resource type="PackedScene" uid="uid://c03alehlk8gbe" path="res://gui/widgets/StatePropertyEntry.tscn" id="2_3nvyx"]
[ext_resource type="PackedScene" uid="uid://d3bfs3ikhudtv" path="res://gui/widgets/PropertyEditorButton.tscn" id="2_aeuej"]

[node name="StatePropertyEditor" type="MarginContainer"]
theme_type_variation = &"StatePropertyEditor"
script = ExtResource("1_dyivk")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AvailableStates" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2

[node name="StatePropertyEntry" parent="Layout/AvailableStates" instance=ExtResource("2_3nvyx")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateContainer" type="HBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateName" type="LineEdit" parent="Layout/CreateContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" parent="Layout/CreateContainer" instance=ExtResource("2_aeuej")]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
